<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/root_content" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/root_layout" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/game_space_main_page_defaultbg" android:scaleType="centerCrop" />
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/game_space_main_page_defaultbg2" android:scaleType="centerCrop" />
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/game_space_main_page_defaultbg3" android:scaleType="centerCrop" />
    <View android:id="@id/navigation_click_area" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginEnd="50.0dip" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/game_space_empty_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <TextView android:textSize="@dimen/font_size_t2" android:id="@id/no_game_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/game_space_not_find_game" />
        <TextView android:textSize="@dimen/font_size_t7" android:gravity="center" android:id="@id/game_space_empty_layout_open_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/game_space_no_game_title_margin" android:maxWidth="450.0dip" android:text="@string/game_space_open_game_center_title" />
        <RelativeLayout android:id="@id/rl_game_download_btn" android:visibility="gone" android:layout_width="72.0dip" android:layout_height="28.0dip" android:layout_marginTop="20.0dip">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/game_space_item_open_bg" android:rotationY="@dimen/angle_rtl_180" />
            <TextView android:textSize="@dimen/font_size_t8" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:id="@id/game_space_empty_layout_open_btn" android:layout_width="fill_parent" android:layout_height="fill_parent" android:maxWidth="131.0dip" android:text="@string/game_space_install_go_now" android:singleLine="true" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/game_space_network_not_connect_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
        <ImageView android:id="@id/game_space_no_network" android:layout_width="@dimen/game_space_no_network_width" android:layout_height="@dimen/game_space_no_network_height" android:src="@drawable/game_space_no_network" android:scaleType="center" />
        <TextView android:textSize="@dimen/font_size_t7" android:textColor="@color/game_space_sub_text" android:gravity="center_horizontal" android:id="@id/game_space_network_not_connect_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="514.0dip" android:text="@string/game_space_network_not_connect_hint" />
        <RelativeLayout android:layout_width="72.0dip" android:layout_height="28.0dip" android:layout_marginTop="20.0dip">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/game_space_item_open_bg" android:rotationY="@dimen/angle_rtl_180" />
            <TextView android:textSize="@dimen/font_size_t8" android:textColor="@color/white" android:ellipsize="end" android:gravity="center" android:id="@id/game_space_setup_network_btn" android:layout_width="fill_parent" android:layout_height="fill_parent" android:maxWidth="131.0dip" android:text="@string/game_setup_connection" android:singleLine="true" android:paddingStart="5.0dip" android:paddingEnd="5.0dip" />
        </RelativeLayout>
    </LinearLayout>
    <ImageView android:layout_gravity="center" android:id="@id/game_space_loading" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
    <com.vivo.game.gamespace.ui.widget.RecyclerCoverFlow android:layout_gravity="center" android:id="@id/list_view" android:visibility="gone" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="@color/transparent" android:fadeScrollbars="true" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="48.0dip">
        <ImageView android:id="@id/game_back" android:layout_width="@dimen/titleBarDefaultHeight" android:layout_height="@dimen/titleBarDefaultHeight" android:src="@drawable/game_space_ic_back" android:scaleType="centerInside" android:rotationY="@dimen/angle_rtl_180" android:layout_marginStart="15.0dip" />
        <ImageView android:layout_gravity="center" android:id="@id/game_space_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/game_space_logo" android:scaleType="fitCenter" />
        <com.vivo.game.gamespace.ui.phonestatus.PhoneStatusLayout android:id="@id/phone_status_layout" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="3.0dip" />
    </LinearLayout>
</RelativeLayout>